# osom_encoders

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: main.yml  pull_request.yml
docs/: x86.yaml
projects/_osom_encoders_common/: Cargo.toml
projects/_osom_encoders_common/src/: const_helpers.rs  fixed_bytes.rs  lib.rs
projects/_osom_encoders_x86_64_gen/: Cargo.toml
projects/_osom_encoders_x86_64_gen/src/: globals.rs  instructions.xml
projects/_osom_encoders_x86_64_gen/src/generator/: mnemonics.rs  mod.rs
projects/_osom_encoders_x86_64_gen/src/models/: instruction_set.rs  instruction_set_deserialize.rs  instruction_set_variant_property.rs
projects/osom_encoders_common/: Cargo.toml
projects/osom_encoders_common/src/: _hidden.rs  encoded_instruction.rs  fixed_buffer.rs  lib.rs  macros.rs  u4.rs
projects/osom_encoders_common/tests/: test_u4.rs
projects/osom_encoders_x86/: Cargo.toml
projects/osom_encoders_x86/src/: invariants.rs
projects/osom_encoders_x86/src/encoding/: enc_group1.rs  enc_misc.rs
projects/osom_encoders_x86/src/encoding/encoding_funcs/: bit32.rs  bit32_gen.rs  bit64.rs  bit64_gen.rs  mod.rs  universal.rs  universal_gen.rs
projects/osom_encoders_x86/src/encoding/utils/: enc_I.rs  enc_MI.rs  helpers.rs  mod.rs
projects/osom_encoders_x86/src/models/: encoded_instruction.rs  gpr.rs  gpr_or_memory.rs  memory.rs  mod.rs  size.rs
projects/osom_encoders_x86/tests/: test_add.rs  test_misc.rs
projects/osom_encoders_x86/tests/common/: mod.rs
projects/osom_encoders_x86_64/: Cargo.toml
projects/osom_encoders_x86_64/src/: invariants.rs  lib.rs
projects/osom_encoders_x86_64/src/encoders/: mod.rs
projects/osom_encoders_x86_64/src/encoders/encoding_funcs/: enc.rs  enc_gen.rs  mnemonics_gen.rs  mod.rs
projects/osom_encoders_x86_64/src/encoders/utils/: enc_I.rs  enc_M.rs  enc_MI.rs  enc_MR.rs  enc_O.rs  enc_OI.rs  helpers.rs  mod.rs
projects/osom_encoders_x86_64/src/encoding/: mod.rs
projects/osom_encoders_x86_64/src/encoding/encoding_funcs/: enc.rs  enc_gen.rs  mnemonics_gen.rs  mod.rs
projects/osom_encoders_x86_64/src/encoding/utils/: enc_I.rs  enc_MI.rs  helpers.rs  mod.rs
projects/osom_encoders_x86_64/src/models/: encoded_instruction.rs  gpr.rs  gpr_or_memory.rs  immediates.rs  immediates_validate.rs  memory.rs  mod.rs  size.rs
projects/osom_encoders_x86_64/tests/: test_add.rs  test_call.rs  test_cmp.rs  test_execution.rs  test_int.rs  test_jmp.rs  test_lea.rs  test_misc.rs  test_mov.rs  test_push_pop.rs  test_sub.rs  test_xor.rs
projects/osom_encoders_x86_64/tests/common/: asserts.rs  mod.rs  raw_machine_code.rs
projects/osom_encoders_x86_64_gen/: Cargo.toml
projects/osom_encoders_x86_64_gen/src/: globals.rs  instructions.xml  main.rs
projects/osom_encoders_x86_64_gen/src/generator/: enc.rs
projects/x86/osom_encoders_x86/: Cargo.toml
projects/x86/osom_encoders_x86_ref_models/: Cargo.toml
projects/x86/osom_encoders_x86_ref_models/src/: lib.rs  models.rs
projects/x86_64/_osom_encoders_x86_64_doc/: Cargo.toml  build.rs
projects/x86_64/_osom_encoders_x86_64_doc/src/: custom_deserializers.rs  lib.rs  validation.rs  x86_doc.rs
projects/x86_64/_osom_encoders_x86_64_doc/tests/: test_x86_doc.rs
projects/x86_64/_osom_encoders_x86_64_generator/: Cargo.toml
projects/x86_64/_osom_encoders_x86_64_generator/src/: generator.rs  main.rs
projects/x86_64/_osom_encoders_x86_64_tests/: Cargo.toml
projects/x86_64/_osom_encoders_x86_64_tests/src/: lib.rs
projects/x86_64/_osom_encoders_x86_64_tests/tests/: test_simple_functions_sysv64.rs  test_simple_functions_win64.rs
projects/x86_64/osom_encoders_x86_64/: Cargo.toml  README.md
projects/x86_64/osom_encoders_x86_64/src/: constants.rs  lib.rs
projects/x86_64/osom_encoders_x86_64/src/encoders/: add.rs  call.rs  cmp.rs  cpuid.rs  int.rs  jcc.rs  jmp.rs  lea.rs  lock.rs  mod.rs  mov.rs  nop.rs  pop.rs  push.rs  ret.rs  sub.rs  syscall.rs  sysenter.rs  xor.rs
projects/x86_64/osom_encoders_x86_64/src/models/: const_checks.rs  encoded_instruction.rs  gpr.rs  gpr_kind.rs  gpr_or_memory.rs  immediate16.rs  immediate32.rs  immediate64.rs  immediate8.rs  memory.rs  mod.rs  offset.rs  scale.rs  size.rs
projects/x86_64/osom_encoders_x86_64/src/partial_encoders/: core.rs  i.rs  m.rs  mi.rs  mod.rs  mr.rs  o.rs  oi.rs  zo.rs
projects/x86_64/osom_encoders_x86_64/tests/: test_add.rs  test_call.rs  test_cmp.rs  test_cpuid.rs  test_int.rs  test_jcc.rs  test_jmp.rs  test_lea.rs  test_mov.rs  test_nop.rs  test_pop.rs  test_push.rs  test_ret.rs  test_sub.rs  test_xor.rs
resources/x86/: x86reference.xml
scripts/: build_docs.py
