[workspace]
members = [
    "projects/osom_encoders_common",
    "projects/osom_encoders_x86_64_gen",
    "projects/osom_encoders_x86_64",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RafalSzefler/osom_encoders"
categories = ["compilers", "encoding", "no-std"]

[workspace.dependencies]
const_format = "0.2"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
bitflags = "2"
strum = { version = "0.27", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

# tests
rstest = "0.25"
region = "3"
assert_hex = "0.4"
