[workspace]
members = [
    "projects/_osom_encoders_common",
    "projects/x86_64/_osom_encoders_x86_64_doc",
    "projects/x86_64/_osom_encoders_x86_64_generator",
    "projects/x86_64/_osom_encoders_x86_64_tests",
    "projects/x86_64/osom_encoders_x86_64",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.95"
license-file = "LICENSE"

[workspace.dependencies]
# tests
rstest = "0.26"
