[package]
name = "_osom_encoders_x86_64_gen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
bitflags = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
