[package]
name = "osom_encoders_x86"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "build/main.rs"

[lib]
crate-type = ["lib"]

[dependencies]
osom_encoders_common = { path = "../osom_encoders_common" }

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
bitflags = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
