[package]
name = "osom_encoders_x86_64"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "build/main.rs"

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"

[lib]
crate-type = ["lib"]

[dependencies]
osom_encoders_common = { path = "../osom_encoders_common" }

[dev-dependencies]
rstest = { workspace = true }
region = { workspace = true }
assert_hex = { workspace = true }

[build-dependencies]
bitflags = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
