[package]
name = "osom_encoders_x86_64"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Tools for encoding x86_64 instructions."
keywords = ["osom", "encoders", "cpu", "instructions", "x86_64"]

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"

[lib]
crate-type = ["lib"]

[dependencies]
osom_encoders_common = { path = "../osom_encoders_common", version = "0.1" }

[dev-dependencies]
rstest = { workspace = true }
region = { workspace = true }
assert_hex = { workspace = true }
