[package]
name = "osom_encoders_x86"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "build/main.rs"

[lib]
crate-type = ["lib"]

[dependencies]

[build-dependencies]
osom_encoders_x86_ref_models = { path = "../osom_encoders_x86_ref_models" }
