[package]
name = "_osom_encoders_x86_64_doc"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = { version = "0.0.25", default-features = false, features = ["deserialize"] }
strum = { version = "0.28", features = ["derive"] }
