[package]
name = "_osom_encoders_x86_64_generator"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
path-absolutize = { version = "3.1" }
_osom_encoders_x86_64_doc = { path = "../_osom_encoders_x86_64_doc", version = "0.1.0" }
